@@ -1,4 +1,6 @@
 ver 0.21.26 (not yet released)
+* output
+  - sles: support floating point samples
 
 ver 0.21.25 (2020/07/06)
 * protocol:
